# pyswizzle

./: LICENSE  README.md  pyproject.toml
src/pyswizzle/: __init__.py  pyswizzle.py
