[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pyswizzle"
version = "1.0.0"
authors = [
  { name="Aclios"},
]
description = "Python implementation of swizzle and deswizzle of video games textures"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Aclios/pyswizzle"
Issues = "https://github.com/Aclios/pyswizzle/issues"
